--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -12,11 +12,17 @@
             </p>
             <div style="display: flex;">
                 <div class="btn">
-                    <internhub-button-blop title="Giriş Yap"></internhub-button-blop>
+                    <a style="text-decoration: none; "
+                       routerLink="/auth">
+                        <internhub-button-blop title="Hemen Başla"></internhub-button-blop>
+                    </a>
                 </div>
-                <div class="btn">
-                    <internhub-button-blop title="Kayıt Ol"></internhub-button-blop>
-                </div>
+                <!-- <div class="btn">
+                    <a style="text-decoration: none; "
+                       routerLink="login">
+                        <internhub-button-blop title="Kayıt Ol"></internhub-button-blop>
+                    </a>
+                </div> -->
             </div>
         </div>
     </div>
