--- a/src/app/components/shared-components/button-blop/button-blop.component.html
+++ b/src/app/components/shared-components/button-blop/button-blop.component.html
@@ -1,4 +1,6 @@
-<button class="blob-btn">
+<button class="blob-btn"
+        [type]="type"
+        (click)="onClickButton($event)">
     {{title}}
     <span class="blob-btn__inner">
         <span class="blob-btn__blobs">
