--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
     </ng-template>
 </div>
 <div class="companies">
-    <div *ngFor="let company of companies"
+    <div *ngFor="let company of companies | filterCompanies: searchValue"
          class="company">
         <a [routerLink]="'/company/'+company.companyId">
             <internhub-company-card [name]="company.name"
@@ -22,9 +22,3 @@
         </a>
     </div>
 </div>
-<!-- <div *ngFor="let result of results |async">
-    {{result.name}}
-</div>
-<div>
-    q
-</div> -->
