--- a/src/app/components/login/sign-in/sign-in.component.html
+++ b/src/app/components/login/sign-in/sign-in.component.html
@@ -7,13 +7,14 @@
                          [nzErrorTip]="emailErrorTpl">
             <nz-input-group nzPrefixIcon="mail">
                 <input nz-input
+                       pattern="[a-z.0-9]*[@][a-z.]*[.]edu.tr"
                        formControlName="email"
                        placeholder="Mail adresinizi giriniz"
                        type="email" />
                 <ng-template #emailErrorTpl
                              let-control>
-                    <ng-container *ngIf="control.hasError('email')">
-                        E-mail formatı doğru değil!
+                    <ng-container *ngIf="control.hasError('pattern')">
+                        Lütfen edu.tr uzantılı bir mail adresi giriniz.
                     </ng-container>
                     <ng-container *ngIf="control.hasError('required')">
                         Bu alanın doldurulması zorunludur!
