--- a/src/app/components/dashboard/company-card/company-card.component.html
+++ b/src/app/components/dashboard/company-card/company-card.component.html
@@ -1,5 +1,6 @@
-<nz-card style="width:300px;"
-         [nzCover]="coverTemplate">
+<nz-card style="width:250px; border-radius: 20px;"
+         [nzCover]="coverTemplate"
+         [nzHoverable]="true">
     <nz-card-meta [nzTitle]="name"
                   [nzDescription]="city"></nz-card-meta>
 </nz-card>
