--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -3,26 +3,26 @@
 <div class="hero">
     <div class="hero-content">
         <div>
-            <h1>Lorem Ipsum</h1>
+            <h1>Internhub'a Hoşgeldin</h1>
             <p>
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                labore et
-                dolore magna aliquyam erat, sed diam voluptua. at vero eos et accusam et justo duo dolores et ea
-                rebum.
+                Internhub stajyerlerin staj yaptıkları iş yerlerini değerlendirdikleri bir oluşumdur.
+                Eğer sende üniversite öğrencisiysen ve staj yaptığın yeri değerlendirmek istiyorsan, hemen şimdi kayıt
+                ol ve stajını değerlendirmeye başla.
             </p>
             <div style="display: flex;">
                 <div class="btn">
                     <a style="text-decoration: none; "
                        routerLink="/auth">
-                        <internhub-button-blop title="Hemen Başla"></internhub-button-blop>
+                        <internhub-button-blop title="kayıt ol"></internhub-button-blop>
                     </a>
                 </div>
-                <!-- <div class="btn">
+                <i style="display: flex; align-items: center;">veya</i>
+                <div class="btn">
                     <a style="text-decoration: none; "
-                       routerLink="login">
-                        <internhub-button-blop title="Kayıt Ol"></internhub-button-blop>
+                       routerLink="/dashboard">
+                        <internhub-button-blop title="sadece oku"></internhub-button-blop>
                     </a>
-                </div> -->
+                </div>
             </div>
         </div>
     </div>
