--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,10 +1,9 @@
-<div class="wrapper">
+<div class="wrapper row">
     <img class="wave"
          src="../../../assets/wave.png">
-    <div class="login-area">
+    <div class="login-area col-xl-6 col-lg-8 col-md-12">
         <div class="login-left">
-            <img src="../../../assets/homepage-img.jpg"
-                 width="400px">
+            <img src="../../../assets/homepage-img.jpg">
         </div>
         <div class="login-right"
              style="display: flex; align-items: center; justify-content: center;">
