--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,1 +1,48 @@
-<p>user-profile works!</p>
+<div class="wrapper"
+     style="height:100%;">
+    <div class="h-100 w-100 row">
+        <div class="col-sm-12 col-lg-4 col-xl-3"
+             style="text-align: center;">
+            <nz-avatar nzIcon="user"
+                       [nzSize]="250"
+                       [nzSrc]="userCredential?.photoURL"
+                       style="margin-top: 20px;"></nz-avatar>
+            <h2 style="margin-top: 25px;"> {{userCredential?.firstName}} {{userCredential?.lastName}} </h2>
+            <h4> {{userCredential?.city}} </h4>
+        </div>
+        <div class="row col-sm-12 col-lg-8 col-xl-9 m-0 mt-5">
+            <div *ngFor="let review of reviews"
+                 class="col-sm-12 col-xl-6">
+                <nz-card style="margin-bottom: 15px;"
+                         [nzHoverable]="true"
+                         [nzBordered]="true"
+                         [nzTitle]="review?.title"
+                         [nzExtra]="extraTemplate"
+                         (click)="onClickReview(review)">
+
+                    <div style="display: flex;justify-content: space-between; align-items: center;">
+                        <div style="text-align: center;">
+                            <nz-avatar nzIcon="user"
+                                       [nzSize]="70"
+                                       [nzSrc]="review.userData.photoURL"></nz-avatar>
+                            <h6><b> {{review.userData.firstName}} {{review.userData.lastName}} </b></h6>
+                            <i> {{review.userData.school}} </i><br>
+                            <i> {{review.userData.department}} </i>
+                        </div>
+                        <div>
+                            <p><b>Staja alım tipi:</b> {{ review?.applyType }}</p>
+                            <p> <b>Staj için ödeme yapıldı mı?</b> {{ review?.isPay }}</p>
+                            <p><b>Çalışan sayısı:</b> {{ review?.employeeCount }}</p>
+                        </div>
+                    </div>
+                    <ng-template #extraTemplate>
+                        <nz-rate [ngModel]="review.rate"
+                                 nzDisabled></nz-rate>
+                    </ng-template>
+                    <p style="text-align: end;">Tamamını okumak için karta tıklayın.</p>
+                </nz-card>
+            </div>
+        </div>
+    </div>
+    <internhub-expand-review [config]="reviewModal"></internhub-expand-review>
+</div>
