--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,3 +3,8 @@
     font-size: 28px;
     color: #707070;
 }
+li {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
