--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -13,14 +13,14 @@
                 <div class="btn">
                     <a style="text-decoration: none; "
                        routerLink="/auth">
-                        <internhub-button-blop title="kayıt ol"></internhub-button-blop>
+                        <internhub-button-blop title="yorum yap"></internhub-button-blop>
                     </a>
                 </div>
                 <i style="display: flex; align-items: center;">veya</i>
                 <div class="btn">
                     <a style="text-decoration: none; "
                        routerLink="/dashboard">
-                        <internhub-button-blop title="sadece oku"></internhub-button-blop>
+                        <internhub-button-blop title="yorumları oku"></internhub-button-blop>
                     </a>
                 </div>
             </div>
